web/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campaigner-web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: campaigner.bemtech.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: campaigner-web
                port: { name: http }
